# c-ice

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Core.h  Doxyfile  ICE.cbp  ICE.sln  ICEngine.sln  LICENSE  LICENSE.md  NOTES.md  Pong.cbp  README.md  Test.cbp  appveyor.yml  codecov.yml  sdl2_downloader.ps1
HelloWorld/: HelloWorld.vcxproj
HelloWorld/src/: main.c
ICEAudio/: ICEAudio.vcxproj  ICEAudio.vcxproj.filters
ICEAudio/src/: Music.c  Sound.c
ICECore/: ICECore.vcxproj  ICECore.vcxproj.filters
ICECore/src/: Converter.c  Core.c  Data.c  Debug.c  Entity.c  Game.c  Input.c  Map.c  Substate.c
ICEGraphics/: ICEGraphics.vcxproj  ICEGraphics.vcxproj.filters
ICEGraphics/src/: Camera.c  Color.c  Draw.c  Font.c  Gui.c  Label.c  Primitive.c  Render.c  Text.c  Texture.c  Window.c
ICEMaths/: ICEMaths.vcxproj  ICEMaths.vcxproj.filters
ICEMaths/src/: Box.c  Maths.c  Random.c  Rect.c  Time.c
ICEPhysics/: ICEPhysics.vcxproj  ICEPhysics.vcxproj.filters
ICEPhysics/src/: Physics.c
ICEngine/: CMakeLists.txt  ICEngine.vcxproj  ICEngine.vcxproj.filters
ICEngine.xcodeproj/: project.pbxproj
ICEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ICEngine/src/: App.c  Array.c  Asset_private.c  Camera.c  Camera_private.c  Color.c  Core.c  Core_private.c  Data.c  Debug.c  Debug_private.c  Draw.c  Draw_private.c  DynString.c  Entity.c  Font.c  Game.c  Game_private.c  Gui.c  Gui_private.c  ICE.h  Init.c  Input.c  Input_private.c  Interpolate.c  Label.c  Label_private.c  Log.c  Map.c  Math.c  Maths.c  Memory_.c  Music.c  Node.c  Physics.c  Physics_private.c  Primitive.c  Random.c  RawImg_error.c  RawImg_icon.c  (+20 more)
ICEngine/src/Audio/: Audio.c  Audio.h  Music.c  Music.h  Sound.c  Sound.h  TypesAudio.h
ICEngine/src/Core/: Asset.c  Asset.h  Asset_private.c  Asset_private.h  Config.h  Config_private.c  Converter_private.h  Core.c  Core.h  Core_private.c  Core_private.h  Data.c  Data.h  Debug.c  Debug.h  DebugGUI.c  DebugGUI.h  Entity.c  Entity.h  Game.c  Game.h  Game_private.c  Game_private.h  Get.h  Input.c  Input.h  Input_private.c  Input_private.h  Label.c  Label.h  Label_private.c  MacOS_.c  MacOS_.h  SDL2_Includer.h  State.c  State.h  Time_.c  Time_.h  Time_private.c  Time_private.h  (+6 more)
ICEngine/src/ExternalEE/chipmunk/: chipmunk_ffi.h  cpHastySpace.c
ICEngine/src/ExternalEE/rlutil/: rlutil.c
ICEngine/src/Framework/: Assert.c  Assert.h  Assert_.c  Assert_.h  File_.c  Inline.h  Log.c  Log.h  Memory_.c  Memory_.h  Random.c  Std_.c  String_.c  String_.h  Terminal.c  Terminal.h  Terminal_private.c  Terminal_private.h  TypesFramework.h
ICEngine/src/Graphics/: Animation.c  Camera.c  Camera.h  Color.h  Color_private.h  Draw.c  Draw.h  Font.c  Font.h  Gui.c  Gui.h  Gui_private.c  Gui_private.h  Primitive.c  Primitive.h  Render.c  Render.h  Render_private.c  Render_private.h  Sprite.c  Sprite.h  Sprite_private.c  Texture.c  Texture.h  Texture_private.c  Texture_private.h  TypesGraphics.h
ICEngine/src/Maths/: Box.h  Interpolate.c  Interpolate.h  Maths.h  TypesMaths.h  Vector.h
ICEngine/src/Physics/: TypesPhysics.h
ICEngine/src/hdr/: App.h  Array.h  Box.h  Camera.h  Camera_private.h  Color.h  Color_private.h  Converter.h  Converter_private.h  Core.h  Core_private.h  Data.h  Debug.h  Debug_private.h  Draw.h  Draw_private.h  Entity.h  Font.h  Game.h  Game_private.h  Gui.h  Gui_private.h  ICE.h  Init.h  Input.h  Input_private.h  Label.h  Label_private.h  Log.h  Map.h  Math.h  Maths.h  Music.h  Node.h  Physics.h  Physics_private.h  Primitive.h  Random.h  Rect.h  Render.h  (+26 more)
ICEngine/src/raw/: Error.c  Icon.c  Raw_error.c  Raw_icon.c  raw_error.c
Physics/: Physics.vcxproj
Physics/src/: main.c
Pong/: Pong.vcxproj  Pong.vcxproj.filters
Pong/src/: main.c
Test/: Test.vcxproj  Test.vcxproj.filters  main.c
Test/src/: control.c  main.c  menu.c
Test2/: Test2.vcxproj  Test2.vcxproj.filters
Test2/src/: main.c
TestProject/2DWatch/: 2DWatch.vcxproj  2DWatch.vcxproj.filters
TestProject/2inside_Remake/: 2inside_Remake.vcxproj
TestProject/HelloPhysics/: HelloPhysics.vcxproj
TestProject/HelloWidows/: HelloWidows.vcxproj  HelloWidows.vcxproj.filters  output.txt
TestProject/HelloWorld/: HelloWorld.vcxproj
TestProject/Physics/: Physics.cbp  Physics.vcxproj
TestProject/Pong/: Pong.vcxproj
TestProject/Test/: CMakeLists.txt  Test.cbp  Test.vcxproj  Test.vcxproj.filters
TestProject/Test/src/: config.h  control.c  debug.h  game.h  main.c  menu.c  player.c  player.h  projectile.c  projectile.h
TestProject/Test/src/hdr/: control.h  data.h  menu.h
cmake/: sdl2_downloader.ps1
doc/html/: _assert_8h.html  _assert_8h_source.html  _asset__private_8h.html  _box_8c.html  _box_8h.html  _box_8h_source.html  _camera_8c.html  _camera_8h.html  _camera_8h_source.html  _color_8c.html  _color_8h.html  _color_8h_source.html  _color__private_8h_source.html  _converter_8c.html  _converter_8h.html  _converter_8h_source.html  _converter__private_8h.html  _converter__private_8h_source.html  _core_8c.html  _core_8h.html  _core_8h_source.html  _data_8c.html  _data_8h.html  _data_8h_source.html  _debug_8c.html  _debug_8h.html  _debug_8h_source.html  _draw_8c.html  _draw_8h.html  _draw_8h_source.html  _entity_8c.html  _entity_8h.html  _entity_8h_source.html  _font_8c.html  _font_8h.html  (+187 more)
docs/: _box_8h.html  _color_8h.html  _core_8h.html  _debug_8h.html  _draw_8h_source.html  _entity_8h_source.html  _font_8h_source.html  _game_8c.html  _gui_8h.html  _input_8h.html  _label_8h_source.html  _maths_8c.html  _music_8h_source.html  _physics_8c.html  _physics_8h.html  _primitive_8c.html  _random_8h_source.html  _terminal_8h.html  _types_audio_8h_source.html  _types_core_8h_source.html  _types_maths_8h.html  _window_8h.html  annotated.html  dir_80c9cbfdd4645940d2e10a65f5ed41f7.html  dir_cc89a509d330c9059f7aeaefd16c95f5.html  globals_defs.html  globals_func.html  globals_vars.html  structice_entity.html  structice_game.html  structice_gui_manager.html  structice_rect.html  structice_sprite.html
script/: sdl2_downloader.ps1  sdl2_downloader_apt.sh  sdl2_downloader_debian.sh
(+757 files in other folders)
